--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/svg+xml" href="/arsenic.webp" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Plant Arenicosis Detection Web App</title>
+  <title>Arenicosis Detection Web App</title>
   <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
 
